--- a/task 1.ipynb
+++ b/task 1.ipynb
@@ -102,7 +102,7 @@
    "source": [
     "df = pd.read_csv('C:/Users/kjsum/Downloads/archive (1)/Genre Classification Dataset/train_data.txt', sep=' ::: ', engine='python', names=['Title', 'Genre', 'Description'], nrows=6000)\n",
     "\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
