--- a/task 1.ipynb
+++ b/task 1.ipynb
@@ -100,7 +100,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('C:/Users/kjsum/Downloads/archive (1)/Genre Classification Dataset/train_data.txt', sep=' ::: ', engine='python', names=['Title', 'Genre', 'Description'], nrows=6000)\n",
+    "df = pd.read_csv('',sep=' ::: ', engine='python', names=['Title', 'Genre', 'Description'], nrows=6000)\n",
     "\n",
     "df.head()\n"
    ]
