--- a/task1.ipynb
+++ b/task1.ipynb
@@ -100,7 +100,8 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('',sep=' ::: ', engine='python', names=['Title', 'Genre', 'Description'], nrows=6000)\n",
+    "\n",
+    "df = pd.read_csv('C:/Users/rakshitha G/Downloads/archive (2)/Genre Classification Dataset/train_data.txt',sep=' ::: ', engine='python', names=['Title', 'Genre', 'Description'], nrows=6000)\n",
     "\n",
     "df.head()\n"
    ]
