--- a/task2.ipynb
+++ b/task2.ipynb
@@ -53,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = pd.read_csv('C:/Users/kjsum/Downloads/fraudTest.csv/fraudTest.csv')\n",
-    "train_data = pd.read_csv('C:/Users/kjsum/Downloads/fraudTrain.csv/fraudTrain.csv')"
+    "test_data = pd.read_csv('C:/Users/rakshitha g/Downloads/fraudTest.csv/fraudTest.csv')\n",
+    "train_data = pd.read_csv('C:/Users/rakshitha g/Downloads/fraudTrain.csv/fraudTrain.csv')"
    ]
   },
   {
