--- a/task2.ipynb
+++ b/task2.ipynb
@@ -6,8 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# CREDIT CARD FRAUD DETECTION \n",
     "import numpy as np\n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "\n"
    ]
   },
   {
@@ -1693,13 +1695,6 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
