--- a/task3.ipynb
+++ b/task3.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#CUSTOMER CHURN PREDICTION\n",
     "import numpy as np \n",
     "import pandas as pd \n",
     "import os\n",
@@ -175,7 +176,7 @@
     }
    ],
    "source": [
-    "banks = pd.read_csv(\"C:/Users/kjsum/Downloads/Churn_Modelling.csv\")\n",
+    "banks = pd.read_csv(\"C:/Users/rakshitha G/Downloads/Churn_Modelling.csv\")\n",
     "banks.head()"
    ]
   },
